[package]
name = "gimbal-motion"
version = "0.1.0"
authors = ["cdaringe <christopher.dieringer@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = { version = "^1.0.79", features = ["backtrace"] }
derive_more = "^0.99.17"
embassy-executor = "*"
embassy-time = "*"
embassy-futures = "*"
embedded-hal = "*"
embedded-io = "*"
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc.git", branch = "master", default-features = false }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", branch = "master", default-features = false }
futures = "^0.3.30"
heapless = "^0.8.0"
libm = "^0.2.8"
log = { version = "0.4", default-features = false }
serde = "^1.0.195"
serde_json = "^1.0.111"
# tmc2209 = { path="../tmc2209/tmc2209" }
thiserror = "*"
url = "^2.5.0"

[patch.crates-io]
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc.git", branch = "master" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", branch = "master" }

[build-dependencies]
embuild = "^0"
